Fix FB recommend widget overflow on small viewport width

--- a/design/articlessocialreactions.css
+++ b/design/articlessocialreactions.css
@@ -14,3 +14,14 @@
 #articles-social-reactions-google {
     margin-left: 12px;
 }
+
+/* Responsive mobile rules: phones vertical (tall) */
+@media only screen and (max-width: 580px) {
+    /* Fix FB recommend widget overflow on small viewport width. */
+    .fb_iframe_widget,
+    .fb_iframe_widget span,
+    .fb_iframe_widget span iframe[style] {
+        overflow: hidden;
+        max-width: 100%;
+    }
+}
